--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.1"
+    "mongoose": "^8.1.1",
+    "socket.io": "^4.7.4"
   },
   "type": "module"
 }
