--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   },
   "type": "module",
   "devDependencies": {
+    "@babel/plugin-syntax-import-attributes": "^7.23.3",
     "@babel/preset-env": "^7.24.0",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0"
   }
 }
