--- a/babel.config.json
+++ b/babel.config.json
@@ -2,6 +2,7 @@
     "presets": [
         ["@babel/preset-env", {"targets": {"esmodules": true}, "modules": "auto"}]
     ],
-    "plugins": ["@babel/plugin-syntax-import-attributes"]
+    "plugins": [
+        ["@babel/plugin-syntax-import-assertions", { "deprecatedAssertSyntax": true }]
+      ]
 }
-
