--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,4 +29,4 @@ jobs:
     - run: npm ci
     - run: yarn test
     - name: Deploy to cloud
-      run: curl ${{ secrets.REDNER_DEPLOY_HOOK }} 
+      run: curl ${{ 'https://api.render.com/deploy/srv-cnnq0bfsc6pc73b9ndg0?key=TdUPhOEpfMM' }} 
