--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
   },
   "type": "module",
   "devDependencies": {
+    "@babel/core": "^7.24.0",
     "@babel/plugin-syntax-import-attributes": "^7.23.3",
     "@babel/preset-env": "^7.24.0",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
-    "jest-environment-node": "^29.7.0"
+    "jest-environment-node": "^29.7.0",
+    "mongodb-memory-server": "^9.1.7",
+    "supertest": "^6.3.4"
   }
 }
