--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "[![Review Assignment Due Date](https://classroom.github.com/assets/deadline-readme-button-24ddc0f5d75046c5622901739e7c5dd533143b0c8e959d652212380cedb1ea36.svg)](https://classroom.github.com/a/Yf9tAXk0) [![Open in Codespaces](https://classroom.github.com/assets/launch-codespace-7f7980b617ed060a017424585567c406b6ee15c891e84e1186181d67ecf80aa0.svg)](https://classroom.github.com/open-in-codespaces?assignment_repo_id=13462505) # PURPOSE This is your team's repo for the ESN Application, the group project conducted in 18652.",
   "main": "App.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "jest"
+    "start": "NODE_ENV=production node app.js",
+    "test": "NODE_ENV=test jest"
   },
   "repository": {
     "type": "git",
