--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@sentry/node": "^7.109.0",
     "@sentry/profiling-node": "^7.109.0",
     "@sentry/tracing": "^7.109.0",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
