--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@sentry/profiling-node": "^7.109.0",
     "@sentry/tracing": "^7.109.0",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
