--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "@babel/core": "^7.24.0",
     "@babel/plugin-syntax-import-attributes": "^7.23.3",
     "@babel/preset-env": "^7.24.0",
+    "@types/jest": "^29.5.12",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "mongodb-memory-server": "^9.1.7",
-    "supertest": "^6.3.4"
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2"
   }
 }
